fix spacing error

--- a/src/styles/partials/homeCard.scss
+++ b/src/styles/partials/homeCard.scss
@@ -15,11 +15,11 @@
 }
 
 .image {
-  top: 5%;
+  top: 2%;
   position: relative;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 1%;
+  padding-top: 2%;
 }
 
 .image img {
